# th2xr-portable

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  vcpkg.json
.agents/: AGENTS.md
.github/workflows/: build.yml  release.yml
android/: .gitignore  build.gradle
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shaders/: .gitignore
android/app/src/main/java/io/github/ripdog/th2xr_portable/: App.kt  GameActivity.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
ci/: build-android-third-party.sh  download-or-build-sdl3-ttf-aar.sh  download-sdl3-aar.sh  install-android-system-tools.sh  install-linux-deps.sh  package-linux-appimage.sh  package-macos-app.sh  package-windows-dist.sh  setup-android-sdk.sh
conformance/: 999999999.SDT  make_th2_conformance.cpp
native/: anime4k.cpp  anime4k.hpp  anime4k_test.cpp  archive.cpp  archive_info.cpp  audio.cpp  audio.hpp  audio_test.cpp  bytecode.cpp  bytecode_info.cpp  character.cpp  character.hpp  character_test.cpp  config.cpp  config.hpp  config_test.cpp  event.cpp  event.hpp  event_test.cpp  expression.cpp  expression_test.cpp  font.cpp  font.hpp  game.cpp  image.cpp  image.hpp  image_info.cpp  imgui_layer.cpp  imgui_layer.hpp  message.cpp  message.hpp  message_test.cpp  player_name.cpp  player_name.hpp  player_name_test.cpp  save_test.cpp  scenario_info.cpp  script_audit.cpp  script_runtime.cpp  script_runtime.hpp  (+10 more)
shaders/anime4k/: apply.frag  apply.frag.msl
src/: anime4k.cpp  anime4k.hpp  anime4k_test.cpp  archive.hpp  audio.cpp  bytecode.hpp  bytecode_info.cpp  bytecode_test.cpp  character.hpp  choice_test.cpp  config.cpp  config.hpp  config_test.cpp  event.cpp  event_metadata.c  event_metadata.h  expression.hpp  font.cpp  font.hpp  game.cpp  game.hpp  game_backlog_touch.cpp  game_config_ui.cpp  game_events.cpp  game_flow.cpp  game_map.cpp  game_media.cpp  game_omake_input.cpp  game_render_effects.cpp  game_render_main.cpp  game_save.cpp  game_save_bundle.cpp  game_save_ui.cpp  game_state.cpp  game_support.cpp  game_title_draw.cpp  gamepad_input.cpp  gamepad_input.hpp  icon.cpp  icon.hpp  (+30 more)
tools/: migrate_ini_state.py  release.sh  soak_parallel.py  soak_prune.py  soak_state.py  soak_state_test.py  soak_status.py  soak_status_test.py
